[package]
name = "toboggan"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Key/value TCP-based database server and client cli based on the sled embedded database"
homepage = "https://github.com/mcaveniathor/toboggan"
repository = "https://github.com/mcaveniathor/toboggan"
keywords = ["database", "kv", "key-value", "cli", "redis"]
categories = ["database-implementations", "command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]

[dependencies]
toboggan-lib = "0.1"
sled = "0.34.7"
futures = "0.3.23"
tarpc = { version = "0.30.0", features = ["tokio1", "serde-transport", "tcp", "serde1", "serde-transport-bincode"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread", ] }
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
anyhow = "1.0.63"

[dependencies.clap]
version = "3.2.17"
features = ["derive"]

