[package]
name = "toboggan-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
futures = "0.3.23"
tarpc = { version = "0.30.0", features = ["serde1"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"


