[package]
name = "toboggan-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library containing server implementations and client stubs for an RPC-based key/value store built on the sled embedded database."
homepage = "https://github.com/mcaveniathor/toboggan/tree/main/toboggan-lib"
documentation = "https://docs.rs/toboggan-lib"
repository = "https://github.com/mcaveniathor/toboggan/tree/main/toboggan-lib"
readme = "README.md"
categories = ["database", "database-implementations"]
keywords = ["rpc", "tarpc", "sled", "key-value", "database", "stub"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
futures = "0.3.23"
tarpc = { version = "0.30.0", features = ["serde1"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.2"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"


